tests/valid/tcomp000_if_then_if/if_then_if.agu
-- tcomp000, Vasco T. Vasconcelos

let _ : Unit =
  if true then if false then unit else unit