tests/invalid-semantic/tcomp000-branches-diff-types/branches-diff-types.agu
-- tcomp000, Vasco T. Vasconcelos
let _ : Unit =
  if true then unit else 5